Change section height for 'about us' section

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <div class="h-20 bg-zinc-900"></div>
 
    <!-- ==== WHY CHOOSE US === -->
-   <section class="min-h-screen py-24 p-6 bg-slate-50" id="about-us">
+   <section class="h-auto py-24 p-6 bg-slate-50" id="about-us">
      
     <div class="max-w-4xl mx-auto">
     <h2 class="w-full text-4xl md:text-5xl font-extrabold text-center text-hotel-expresso mb-12"> Why Choose Ambience Hotel?</h2>
